--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aliyun-oss-figure-bed"
-version = "0.1.5"
+version = "0.1.6"
 edition = "2024"
 
 [dependencies]
@@ -8,3 +8,4 @@ aliyun-oss-client = "0.12"                          # Verify the latest version 
 tokio = { version = "1.47.1", features = ["full"] }
 chrono = "0.4.41"
 uuid = { version = "1.0", features = ["v4"] }
+futures = "0.3"
